# Futbol_Awesome

./: pyproject.toml
back/auth/: app.py  config.py  model.py  provider.py  seed.py  view.py
back/satarlette_admin/: __init__.py  _types.py  actions.py  auth.py  base.py  converters.py  exceptions.py  fields.py  i18n.py  views.py
back/sqla/app/: app.py  users.py
