[tool.poetry]
name = "futbol-awesome-fastapi"
version = "0.1.0"
description = ""
authors = ["Rodrigo Tapia <rodrigojtapia21@gmail.com>"]
readme = "README.md"
packages = [{include = "futbol_awesome_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
itsdangerous = "^2.1.2"
starlette-admin = "^0.11.2"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
